<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB300"
    tools:context=".fragment.FactsFragment">

    <TextView
        android:id="@+id/factsTextView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#ffd46e"
        android:text="@string/the_facts"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"/>

    <ImageButton
        android:id="@+id/hamburgerImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_hamburger"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/navigation_drawer"
        style="?android:attr/borderlessButtonStyle"
        />

    <ImageButton
        android:id="@+id/nextFactsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/facts"
        android:src="@drawable/ic_next_arrow"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/previousFactsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/facts"
        android:src="@drawable/ic_previous_arrow"
        android:visibility="invisible"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageView
        android:id="@+id/imageFact1"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/facts"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/factsTextView"
        android:src="@drawable/fact1"
        android:paddingHorizontal="10dp"/>

    <ImageView
        android:id="@+id/imageFact2"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/facts"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageFact1"
        android:src="@drawable/fact2"
        android:scaleType="fitXY"
        android:paddingHorizontal="10dp"/>

    <ImageView
        android:id="@+id/imageFact3"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:contentDescription="@string/facts"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageFact2"
        android:src="@drawable/fact3"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:paddingHorizontal="10dp"/>


    <ImageView
        android:id="@+id/imageFact4"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/facts"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/factsTextView"
        android:layout_marginTop="30dp"
        android:src="@drawable/fact4"
        android:paddingHorizontal="10dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageFact5"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/facts"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageFact4"
        android:src="@drawable/fact5"
        android:paddingHorizontal="15dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageFact6"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:contentDescription="@string/facts"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageFact5"
        android:src="@drawable/fact6"
        android:paddingHorizontal="10dp"
        android:visibility="invisible"/>

</RelativeLayout>