<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB300"
    tools:context=".fragment.DevelopersFragment">

    <TextView
        android:id="@+id/developerTextView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#ffd46e"
        android:text="@string/the_developers"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"/>

    <ImageButton
        android:id="@+id/hamburgerImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_hamburger"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/navigation_drawer"
        style="?android:attr/borderlessButtonStyle"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="@drawable/start_button"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/developerTextView"
        android:layout_marginTop="80dp"
        android:layout_marginStart="105dp"
        android:text="@string/ayan_mukherjee"
        android:textSize="15sp"
        android:textColor="#5F2F00"
        android:textAlignment="viewEnd"
        android:paddingTop="2dp"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:fontFamily="@font/start_custom_font"/>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/developerTextView"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/ayan"
        android:contentDescription="@string/ayan_mukherjee"/>

    <ImageButton
        android:id="@+id/ayanGithubButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/github"
        android:layout_below="@+id/text1"
        android:layout_toEndOf="@id/image1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ayan_mukherjee"/>

    <ImageButton
        android:id="@+id/ayanLinkedinButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/linkedin"
        android:layout_below="@+id/text1"
        android:layout_toEndOf="@id/ayanGithubButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ayan_mukherjee"/>

    <ImageButton
        android:id="@+id/ayanGmailButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/gmail"
        android:layout_below="@+id/text1"
        android:layout_toEndOf="@id/ayanLinkedinButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ayan_mukherjee"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="@drawable/start_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/image1"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="105dp"
        android:text="@string/souvik_ghosh"
        android:textSize="15sp"
        android:textColor="#5F2F00"
        android:textAlignment="viewStart"
        android:paddingTop="2dp"
        android:paddingEnd="18dp"
        android:paddingStart="30dp"
        android:fontFamily="@font/start_custom_font"/>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/image1"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:src="@drawable/souvik"
        android:contentDescription="@string/souvik_ghosh"/>

    <ImageButton
        android:id="@+id/souvikGithubButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/github"
        android:layout_below="@+id/text2"
        android:layout_toStartOf="@id/image2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/souvik_ghosh"/>

    <ImageButton
        android:id="@+id/souvikLinkedinButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/linkedin"
        android:layout_below="@+id/text2"
        android:layout_toStartOf="@id/souvikGithubButton"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/souvik_ghosh"/>

    <ImageButton
        android:id="@+id/souvikGmailButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/gmail"
        android:layout_below="@+id/text2"
        android:layout_toStartOf="@id/souvikLinkedinButton"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ayan_mukherjee"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:background="@drawable/start_button"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image2"
        android:layout_marginTop="38dp"
        android:layout_marginStart="105dp"
        android:text="@string/sawon_bhattacharya"
        android:textSize="13sp"
        android:textColor="#5F2F00"
        android:textAlignment="viewEnd"
        android:paddingTop="2dp"
        android:paddingEnd="7dp"
        android:paddingStart="7dp"
        android:fontFamily="@font/start_custom_font"/>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/image2"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:src="@drawable/sawon"
        android:contentDescription="@string/sawon_bhattacharya"/>

    <ImageButton
        android:id="@+id/sawonGithubButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/github"
        android:layout_below="@+id/text3"
        android:layout_toEndOf="@id/image3"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sawon_bhattacharya"/>

    <ImageButton
        android:id="@+id/sawonLinkedinButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/linkedin"
        android:layout_below="@+id/text3"
        android:layout_toEndOf="@id/sawonGithubButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sawon_bhattacharya"/>

    <ImageButton
        android:id="@+id/sawonGmailButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/gmail"
        android:layout_below="@+id/text3"
        android:layout_toEndOf="@id/sawonLinkedinButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sawon_bhattacharya"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="@drawable/start_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/image3"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="105dp"
        android:text="@string/rajarsi_saha"
        android:textSize="15sp"
        android:textColor="#5F2F00"
        android:textAlignment="viewStart"
        android:paddingTop="2dp"
        android:paddingEnd="18dp"
        android:paddingStart="32dp"
        android:fontFamily="@font/start_custom_font"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/image3"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:src="@drawable/rajarsi"
        android:contentDescription="@string/rajarsi_saha"/>

    <ImageButton
        android:id="@+id/rajarsiGithubButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/github"
        android:layout_below="@+id/text4"
        android:layout_toStartOf="@id/image2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rajarsi_saha"/>

    <ImageButton
        android:id="@+id/rajarsiLinkedinButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/linkedin"
        android:layout_below="@+id/text4"
        android:layout_toStartOf="@id/rajarsiGithubButton"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rajarsi_saha"/>

    <ImageButton
        android:id="@+id/rajarsiGmailButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/gmail"
        android:layout_below="@+id/text4"
        android:layout_toStartOf="@id/rajarsiLinkedinButton"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rajarsi_saha"/>

</RelativeLayout>